DocumentType сделан таблицей которую пользователь может изменять и дополнять и указывать свои сроки в днях для каждого вида документа. создан шаблон для шапки и подвала